--- a/calculator/index.html
+++ b/calculator/index.html
@@ -12,38 +12,38 @@
 
     <div class="calculator">
         <div class="screen">
-            <p>1 + 1</p>
-            <p>2</p>
+            <p id="expression"></p>
+            <p id="result"></p>
         </div>
 
         <div class="buttons">
-            <button class="symbol">(</button>
-            <button class="symbol">)</button>
-            <button class="symbol">ans</button>
-            <button class="symbol">del</button>
-            <button class="symbol">clear</button>
+            <div class="btn symbol">(</div>
+            <div class="btn symbol">)</div>
+            <div class="symbol" id="ans">ans</div>
+            <div class="symbol" id="del">del</div>
+            <div class="btn symbol" id="clear">clear</div>
 
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
-            <button class="symbol">%</button>
-            <button class="symbol">√</button>
+            <div class="btn number">7</div>
+            <div class="btn number">8</div>
+            <div class="btn number">9</div>
+            <div class="btn symbol">%</div>
+            <div class="btn symbol">√</div>
 
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
-            <button class="symbol">x</button>
-            <button class="symbol">/</button>
+            <div class="btn number">4</div>
+            <div class="btn number">5</div>
+            <div class="btn number">6</div>
+            <div class="btn symbol">*</div>
+            <div class="btn symbol">/</div>
 
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
-            <button class="symbol">+</button>
-            <button class="symbol">-</button>
+            <div class="btn number">1</div>
+            <div class="btn number">2</div>
+            <div class="btn number">3</div>
+            <div class="btn symbol">+</div>
+            <div class="btn symbol">-</div>
 
-            <button class="number">0</button>
-            <button class="symbol">.</button>
-            <button class="enter">ENTER</button>
+            <div class="btn number">0</div>
+            <div class="btn symbol">.</div>
+            <div class="enter" id="enter">ENTER</div>
 
         </div>
     </div>
