--- a/tribute page/public/assets/index.html
+++ b/tribute page/public/assets/index.html
@@ -27,6 +27,31 @@
                 alt="main-img">
         </div>
     </section>
+    <section id="about">
+        <div class="about-container">
+            <div class="about-text">
+                <h1 class="about-title" id="about-title">Biography</h1>
+                <div class="divider second"></div>
+                <p class="about-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+                    perferendis deserunt placeat
+                    modi
+                    accusantium, beatae et velit quaerat dicta fugiat nam ipsum, maiores tempora distinctio ab commodi.
+                    Aliquid, eius recusandae.
+                </p>
+            </div>
+            <div class="quote-group">
+                <i class="fa-solid fa-quote-left"></i>
+                <p class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus officia totam tempore
+                    commodi inventore modi!</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <h5>Made with ❤️ by Keitumetse Sello</h5>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/ca50782fbd.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
