add proper content

--- a/tribute page/index.html
+++ b/tribute page/index.html
@@ -32,17 +32,28 @@
             <div class="about-text">
                 <h1 class="about-title" id="about-title">Biography</h1>
                 <div class="divider second"></div>
-                <p class="about-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
-                    perferendis deserunt placeat
-                    modi
-                    accusantium, beatae et velit quaerat dicta fugiat nam ipsum, maiores tempora distinctio ab commodi.
-                    Aliquid, eius recusandae.
+                <p class="about-description">
+                    Michael Joseph Jackson was born on August 29, 1958, in Gary, Indiana, USA. From a young age, Jackson
+                    showed immense talent and a passion for music. He began his career as a member of the Jackson 5
+                    alongside his older brothers, quickly gaining fame for their Motown hits such as "I Want You Back"
+                    and "ABC."
+
+                    In 1971, at the age of 13, Michael launched his solo career with the album "Got to Be There," which
+                    included the hit single "Ben." However, it was his 1979 album "Off the Wall" that propelled him to
+                    solo stardom, with chart-topping singles like "Don't Stop 'Til You Get Enough" and "Rock with You."
+
+                    The 1980s marked the peak of Jackson's career with the release of his album "Thriller" in 1982,
+                    which became the best-selling album of all time, producing iconic hits like "Billie Jean," "Beat
+                    It," and the title track "Thriller." Jackson's groundbreaking music videos, including the 14-minute
+                    mini-movie for "Thriller," revolutionized the music industry and solidified his status as a global
+                    superstar.
                 </p>
             </div>
             <div class="quote-group">
                 <i class="fa-solid fa-quote-left"></i>
-                <p class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus officia totam tempore
-                    commodi inventore modi!</p>
+                <p class="quote">In a world filled with hate, we must still dare to hope. In a world filled with anger,
+                    we must still dare to comfort. In a world filled with despair, we must still dare to dream. And in a
+                    world filled with distrust, we must still dare to believe.</p>
             </div>
         </div>
     </section>
